<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_state_wifi"
                    android:textSize="15sp" />
                <TextView
                    android:id="@+id/wifiStateTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp" >
                <Button
                    android:id="@+id/disableWifi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/disable_wifi"
                    android:onClick="disableWifi"
                    android:textSize="15sp" />
                <Button
                    android:id="@+id/enableWifi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/enable_wifi"
                    android:onClick="enableWifi"
                    android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_state_screen_capture"
                    android:textSize="15sp" />
                <TextView
                    android:id="@+id/screenCaptureStateTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp" >
                <Button
                    android:id="@+id/disableScreenCapture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/disable_screen_capture"
                    android:onClick="disableScreenCapture"
                    android:textSize="15sp" />
               <Button
                    android:id="@+id/enableScreenCapture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/enable_screen_capture"
                    android:onClick="enableScreenCapture"
                    android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_state_keep_alive"
                    android:textSize="15sp" />
                <TextView
                    android:id="@+id/keepAliveStateTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp" >
                <Button
                    android:id="@+id/keepAlive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/keep_alive"
                    android:onClick="keepAlive"
                    android:textSize="15sp" />
                <Button
                    android:id="@+id/cancelAlive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel_alive"
                    android:onClick="cancelAlive"
                    android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="15dp" >
            <Button
                android:id="@+id/btn_remove_active_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="removeActiveAdmin"
                android:layout_marginTop="5dp"
                android:text="@string/remove_active_admin" />
    </LinearLayout>
</LinearLayout>